fixes; improve code with record, switch and list or something