@@ -7,7 +7,6 @@ import raylras.zen.ast.Node;
 import raylras.zen.ast.Range;
 import raylras.zen.ast.visit.NodeVisitor;
 
-import java.util.Collections;
 import java.util.List;
 
 public final class AliasDeclaration extends BaseNode implements Declaration, LocatableID {
@@ -42,7 +41,7 @@ public final class AliasDeclaration extends BaseNode implements Declaration, Loc
 
     @Override
     public List<? extends Node> getChildren() {
-        return Collections.emptyList();
+        return List.of();
     }
 
 
