@@ -29,7 +29,7 @@ public final class ParensExpression extends BaseNode implements Expression {
 
     @Override
     public List<? extends Node> getChildren() {
-        return Collections.singletonList(expr);
+        return List.of(expr);
     }
 
     @Override
