@@ -4,7 +4,6 @@ import raylras.zen.ast.BaseNode;
 import raylras.zen.ast.Node;
 import raylras.zen.ast.visit.NodeVisitor;
 
-import java.util.Collections;
 import java.util.List;
 
 public final class ThisExpression extends BaseNode implements Expression {
@@ -16,7 +15,7 @@ public final class ThisExpression extends BaseNode implements Expression {
 
     @Override
     public List<? extends Node> getChildren() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     @Override
