@@ -5,7 +5,6 @@ import raylras.zen.ast.BaseNode;
 import raylras.zen.ast.Node;
 import raylras.zen.ast.visit.NodeVisitor;
 
-import java.util.Collections;
 import java.util.List;
 
 public final class UnaryExpression extends BaseNode implements Expression {
@@ -37,7 +36,7 @@ public final class UnaryExpression extends BaseNode implements Expression {
 
     @Override
     public List<? extends Node> getChildren() {
-        return Collections.singletonList(expr);
+        return List.of(expr);
     }
 
     @Override
